Fixed bug #32797 (invalid C code in xmlrpc extension).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@184879 c90b9560-bf6c-de11-be94-00142212c4b1